views/stylesheets/_application.scss
/* ... */
/* @group media queries Group */
@media only screen and (max-width: 650px) {
[class*=columns]{
  width: 100%;
  margin-left: 0;
}
#wrap #wrap-footer{
  height: 80px;
}
.row{
  margin-bottom: $baseline;
}
.size3{
  font-size: 38px;
  line-height: $baseline*2;
}
.size4{
  font-size: 38px;
  line-height: $baseline*2;
}


header{
  position: relative;
  height: $baseline*5 +8px;
  nav{
    .logo{
      float: left;
      margin-top: 47px;
    }
    ul{
      font-family: "ff-meta-web-pro", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
      line-height: 18px;
      width: 50%;
      li{
        float: left;
        width: 100%;
        text-align: right;
        margin: 5px 0;
      }
    }
  }
}


.page-homepage {
  .row:first-child{
    margin-top: $baseline;
  }

  .slideshow {
    margin-top: -15px;

    .slides_container {
      height: 330px;
      li {
        &.slide1 {
          h1:first-child {
            margin-bottom: 0;
          }
          h1:nth-child(2) {
            margin-top: 0;
            font-size: 35px;
            line-height: $baseline*2;
            margin-bottom: $baseline;
          }
        }
        &.slide2 h2{
            line-height: 1.2;
        }
      }
      .size2 {
        font-size: 24px;
        line-height: $baseline*1.5 ;
      }
    }
  }
  .columns2 {
    a {
      margin-bottom: $baseline*2;
    }
    .blog-snippet {

    }
  }
}


.page-work {
  .row:first-child {
    margin-top: 0;
    .columns3 {
      margin-top: -25px;
    }
    p {
      padding-top: $baseline +25px;
    }
  }
  .case-study {
    padding-top: $baseline;
    margin-bottom: 0;
    &:nth-child(4) {
      padding-top: 0;
      margin-bottom: -$baseline;
    }
    .row {
      margin-top: $baseline;
      margin-bottom: 0;
      .columns3 {
        margin-bottom: $baseline;
      }
      .frame {
        .img {
          height: $baseline*4;
          padding-top: $baseline*2;
          &.clarity {
            height: $baseline*5;
            padding-top: $baseline*1;
          }
        }
      }

    }
  }
  hr:nth-child(even) {
    margin-top: $baseline;
  }
  .frame {
    margin-bottom: $baseline;
  }
  h3 {
    font-size: 16px;
    line-height: $baseline;
  }
}


.page-labs {
  .row:first-child {
    margin-top: $baseline;

    .columns6:first-child{
      margin-top: -25px;
    }
  }

  .filter{
    font-size: .9em;
  }

  .row:nth-child(2) {
    margin-bottom: 0;
  }

  h2 {
    margin-bottom: $baseline;
  }
  hr {
    margin-bottom: $baseline;
  }
  .open-source {
    p{
      margin-top: $baseline;
    }
  }

  .tricklr{
    .frame{
      width: 100%;
    }

    .product-container{
      margin-left: 0;
      margin-bottom: $baseline;
      width: 100%;
    }
  }

  .project .frame{
    display: none;
  }
}

.labs-header{
  margin: $baseline*2 0 $baseline;
}

.page-people {
  .headline {
    margin-top: 0;
  }
  .people-copy {
    margin-bottom: 0;
  }
  #spotlight {
    .row:first-child {
      margin-bottom: $baseline;
    }
    hr {
      margin-bottom: $baseline;
    }

    .frame { // 100% row
      width: auto;
      float: none;
      margin-left: 0;

      &.top {
        display: block; // Showing bottom image
      }
      &.bottom {
        display: none; // Showing bottom image
      }
      .img{
        width: 100%;
        position: static;
      }
      img{
        position: static;
      }
    }

    article { // Next row under image
      width: 100%;
      float: none;
      .inner-wrapper {
        margin-left: 0;
      }
    }

    h1 {
      margin-top: $baseline;
    }
    h2 {
      margin-top: $baseline;
      margin-bottom: $baseline;
    }
    h3 {
      margin-bottom: $baseline;
      font-size: 16px;
      line-height: $baseline;
    }
    .link {
      margin-bottom: 0;
      a{
        color: $green;
      }
    }
  }

  .employees {
    .person,
    .join-us{
        width: 45%;
        float: left;
        margin-left: 0;
        margin-right: 5%;
        margin-bottom: $baseline;
        min-width: 125px;
        height: 210px;
      p{
        margin-bottom: -5px;
      }
    }
    li:nth-child(2n){
      .person,
      .join-us{
        margin-right: 0;
      }
    }
  }
}

.page-thoughts {
  #thoughts-heading {
    margin-top: -15px;
  }
  hr {
    margin-bottom: $baseline;
  }
  .blog-post {
    margin-bottom: $baseline*3;
    .img {
      background: $orange;
      height: $baseline*8;
    }
  }
  .blog-sidebar {
    display: none;
  }
}

.page-address {
  .size2 {
    font-size: 16px;
    line-height: $baseline;
  }
}

.page-find-us {
  .size2 {
    font-size: 16px;
    line-height: $baseline;
  }
  .row:first-child {
    margin-top: $baseline;
  }
}

} /* media-q end */


/* Fix for homepage text going out of slide. */
@media only screen and (max-width: 770px) {


.slides_container {
  .size4{
    font-size: 38px;
    line-height: $baseline*2;
  }

  height: 330px;
  li {
    &.slide1 {
      h1:first-child {
        margin-bottom: 0;
      }
      h1:nth-child(2) {
        margin-top: 0;
        font-size: 35px;
        line-height: $baseline*3;
        margin-bottom: $baseline;
      }
    }
  }
  .size2 {
    font-size: 24px;
    line-height: $baseline*1.5 ;
  }
}

}


/* @end */

@media
only screen and (-webkit-min-device-pixel-ratio : 1.5),
only screen and (min-device-pixel-ratio : 1.5) {
  #social li a {
    background-image: url('../images/social@2x.png') !important;
    background-size: 80px 20px;
  }

  .logo{
    background-image: url('../images/logo@2x.png') !important;
    background-size: 142px 23px;
  }
}
/* ... */

